fix(dialog): fix message word-wrap and improve uploader component tests and docs

--- a/packages/varlet-ui/src/dialog/dialog.less
+++ b/packages/varlet-ui/src/dialog/dialog.less
@@ -37,6 +37,7 @@
     color: var(--dialog-message-color);
     line-height: var(--dialog-message-line-height);
     font-size: var(--dialog-message-font-size);
+    word-wrap: break-word;
   }
 
   &__actions {
